# machisaga

./: main.py  pyproject.toml
src/machisaga/: find.py  main.py
static/: style.css
templates/: index.html
